[gd_scene load_steps=11 format=2]

[ext_resource path="res://Player/Sounds/jump.wav" type="AudioStream" id=1]
[ext_resource path="res://Player/Sounds/walk.wav" type="AudioStream" id=2]
[ext_resource path="res://Player/crosshair.png" type="Texture" id=3]
[ext_resource path="res://Player/Player.gd" type="Script" id=4]
[ext_resource path="res://Materials/indicator_jump_base.tres" type="Material" id=5]

[sub_resource type="CapsuleMesh" id=1]
radius = 0.5
mid_height = 1.5

[sub_resource type="CapsuleShape" id=2]
radius = 0.5
height = 1.5

[sub_resource type="Animation" id=3]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("CameraSocket/Camera:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.329877, 0.554785 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -1, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("CameraSocket/Camera:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.757858, 1 ),
"update": 0,
"values": [ Vector3( 0, -1, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="CubeMesh" id=5]

[node name="Player" type="KinematicBody"]
script = ExtResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 1.25, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 1.25, 0 )
shape = SubResource( 2 )

[node name="CameraSocket" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.26737, 0 )

[node name="Camera" type="Camera" parent="CameraSocket"]

[node name="SpotLight" type="SpotLight" parent="CameraSocket"]
transform = Transform( 1, 0, 0, 0, 0.972529, -0.232783, 0, 0.232783, 0.972529, 0, -0.368344, -0.61 )
light_color = Color( 0.768627, 0.905882, 0.996078, 1 )
light_energy = 0.66
light_indirect_energy = 2.38
light_specular = 1.0
shadow_enabled = true
spot_range = 95.8
spot_angle = 31.5

[node name="RayCast" type="RayCast" parent="CameraSocket"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.732608 )
enabled = true
cast_to = Vector3( 0, 0, -100 )

[node name="Crosshair" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WalkPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="SprintPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = 5.0
pitch_scale = 2.0

[node name="JumpPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -15.0

[node name="SneakPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -15.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Sneak = SubResource( 3 )
anims/UnSneak = SubResource( 4 )

[node name="JumpIndicator" type="MeshInstance2D" parent="."]
material = ExtResource( 5 )
position = Vector2( 512, 330 )
scale = Vector2( 10, 10 )
mesh = SubResource( 5 )
